{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 7,
  "lineage": "c519ca98-6359-15fb-9ba2-4814922f2d32",
  "resources": [
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aa7eb826-19ee-49af-970b-5efe375adf4f/resourceGroups/yasin-resource-group/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "eastus",
            "name": "example-nsg",
            "resource_group_name": "yasin-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Allow-HTTP",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/aa7eb826-19ee-49af-970b-5efe375adf4f/resourceGroups/yasin-resource-group/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "example-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "yasin-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "yasin-subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aa7eb826-19ee-49af-970b-5efe375adf4f/resourceGroups/yasin-resource-group/providers/Microsoft.Network/virtualNetworks/Yasin-vnet/subnets/yasin-subnet1",
            "name": "yasin-subnet1",
            "resource_group_name": "yasin-resource-group",
            "virtual_network_name": "Yasin-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "yasin-subnet2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aa7eb826-19ee-49af-970b-5efe375adf4f/resourceGroups/yasin-resource-group/providers/Microsoft.Network/virtualNetworks/Yasin-vnet/subnets/yasin-subnet2",
            "name": "yasin-subnet2",
            "resource_group_name": "yasin-resource-group",
            "virtual_network_name": "Yasin-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "93afe23e-7a12-4243-94f6-eb0c528ecefd",
            "id": "/subscriptions/aa7eb826-19ee-49af-970b-5efe375adf4f/resourceGroups/yasin-resource-group/providers/Microsoft.Network/virtualNetworks/Yasin-vnet",
            "location": "eastus",
            "name": "Yasin-vnet",
            "resource_group_name": "yasin-resource-group"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}